--- a/DirectX12GameEngine.vcxproj.filters
+++ b/DirectX12GameEngine.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Window.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="D3DX.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Window.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="D3DX.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
