--- a/DirectX12GameEngine.vcxproj
+++ b/DirectX12GameEngine.vcxproj
@@ -138,11 +138,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="D3DX.cpp" />
+    <ClCompile Include="Input.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="D3DX.h" />
+    <ClInclude Include="Input.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
