Rendered a fucking button after countless attempts

--- a/DirectXGameEngine.vcxproj.filters
+++ b/DirectXGameEngine.vcxproj.filters
@@ -84,4 +84,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="assets\start_game.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
