--- a/DirectXGameEngine.vcxproj.filters
+++ b/DirectXGameEngine.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClInclude Include="Window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IHitbox.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Physics.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Button.cpp">
@@ -80,12 +86,18 @@
     <ClCompile Include="Window.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Physics.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\start_game.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="assets\cursor_sprite.png">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
