--- a/DirectXGameEngine.vcxproj
+++ b/DirectXGameEngine.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Button.h" />
+    <ClInclude Include="Character.h" />
     <ClInclude Include="Cursor.h" />
     <ClInclude Include="D3DX.h" />
     <ClInclude Include="Font.h" />
@@ -142,6 +143,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Button.cpp" />
+    <ClCompile Include="Character.cpp" />
     <ClCompile Include="Cursor.cpp" />
     <ClCompile Include="D3DX.cpp" />
     <ClCompile Include="Font.cpp" />
